tests/negative/test_expr_addrof_tuple_member_non_ref.orb
fnc foo() (i32 i32) {
    let f:(i32 i32);
    ret f;
};

fnc main() () {
    & (. (foo) 0);
};